--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>commons-math3</artifactId>
       <version>3.5</version>
     </dependency>	
+	<dependency>
+		<groupId>com.sparkjava</groupId>
+		<artifactId>spark-core</artifactId>
+		<version>2.9.3</version>
+	</dependency>
   </dependencies>
   <build>
    <plugins>
@@ -40,6 +45,18 @@
         <excludePackageNames>com.vu.poc.test.objects</excludePackageNames>
         <overview />
         </configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<version>3.0.1</version>
+			<executions>
+				<execution>
+					<id>copy-dependencies</id>
+					<phase>package</phase>
+					<goals><goal>copy-dependencies</goal></goals>
+				</execution>
+			</executions>
 		</plugin>
     </plugins>
   </build>
